--- a/TicTacToe/ExerciseTicTacToe.html
+++ b/TicTacToe/ExerciseTicTacToe.html
@@ -29,8 +29,8 @@
     <div class="container">
       <div class="jumbotron">
         <h1 id="heading">Welcome to Tic Tac Toe !!</h1>
-        <h4>Players can choose "X" or "O", Tap on any cell once to choose an "X" and tap that cell again to choose an "O" :)</h4>
-        <button type="button" class="btn btn-primary btn-lg b">Restart!</button>
+        <h4>Players can choose 'X' or 'O', Tap on any cell once to insert the sign , The player who stats the game is automatically assinged a 'X' :)</h4>
+        <button type="button" class="btn btn-primary btn-lg b">Start!</button>
       </div>
       <table>
         <tr>
